// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomList should match snapshot with FlatList 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  data={
    Array [
      Object {
        "username": "username_1",
      },
      Object {
        "username": "username_2",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  numColumns={1}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onScroll={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickySectionHeadersEnabled={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`CustomList should match snapshot with SectionList 1`] = `
<SectionList
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  data={Array []}
  disableVirtualization={false}
  extraData={false}
  horizontal={false}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onScroll={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={60}
  sections={
    Array [
      Object {
        "username": "username_1",
      },
      Object {
        "username": "username_2",
      },
    ]
  }
  stickySectionHeadersEnabled={false}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`CustomList should match snapshot, renderFooter 1`] = `null`;

exports[`CustomList should match snapshot, renderFooter 2`] = `<View />`;

exports[`CustomList should match snapshot, renderSectionHeader 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(61,60,64,0.07)",
        "paddingLeft": 10,
        "paddingVertical": 2,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#3d3c40",
            "fontWeight": "600",
          },
          null,
        ]
      }
    >
      section_id
    </Text>
  </View>
</View>
`;

exports[`CustomList should match snapshot, renderSeparator 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(61,60,64,0.1)",
      "flex": 1,
      "height": 1,
    }
  }
/>
`;
